tercer commit lunes 23 filtros

--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -46,6 +46,9 @@
         </div>
     </div>
 </div> -->
+
+
+
 <div class="card">
 <div class="card-header">
 lista de productos
@@ -56,12 +59,12 @@ lista de productos
             filtrar:
         </div>
         <div>
-            <input type="text" class="from-control" name="filter">
+            <input type="text" [(ngModel)]="listFiter" class="form-control" name="filter">
         </div>
     </div>
     <div class="row">
         <div class="col-md-6">
-            <h3>Filtro:</h3>
+            <h3>Filtro: {{listFiter}}</h3>
         </div>
     </div>
     <div class="table-responsive">
@@ -70,7 +73,7 @@ lista de productos
                 <tr>
                     <th>
                         <button (click)="mostrarImagen()" class="btn btn-primary"
-                        type="button">imagen</button>
+                        type="button">{{muestraImg?'Ocultar ': 'Muestra '}} imagen</button>
                     </th>
                     <th>modelo</th>
                     <th>descripcion</th>
@@ -81,20 +84,21 @@ lista de productos
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let producto of productos">
+                <tr *ngFor="let producto of productos | productoFilter:listFiter">
+
                     <td>
-                        <img [src]="producto.imgUrl"
-                        [title]="producto.modelo"
+                        <img [src]="producto.ImgUrl"
+                        [title]="producto.Modelo"
                         [style.width.px]="imageWith"
                         [style.margin.px]="imageMargin">
                     </td>
 
-                    <td>{{producto.modelo}}</td>
-                    <td>{{producto.descripcion}}</td>
-                    <td>{{producto.year|date}}</td>
-                    <td>{{producto.precio|currency}}</td>
-                    <td>{{producto.marca}}</td>
-                    <td>{{producto.color}}</td>
+                    <td>{{producto.Modelo}}</td>
+                    <td>{{producto.Descripcion}}</td>
+                    <td>{{producto.Year|date}}</td>
+                    <td>{{producto.Precio|currency}}</td>
+                    <td>{{producto.Marca}}</td>
+                    <td>{{producto.Color}}</td>
                 </tr>
             </tbody>
         </table>
