cuarto commit distancias martes 24 septiembre

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,8 @@
   <h2>Pago: {{alumno.pago | currency}}</h2>
 </div> -->
 <div>
-  <app-product-list></app-product-list>
+<!--   <app-product-list></app-product-list>
+ -->
+  <!-- <app-ejemplo1></app-ejemplo1> -->
+   <app-distancia></app-distancia>
 </div>
