commit zodiaco 09 de octubre

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,5 +18,6 @@
 <!--   <app-product-list></app-product-list>
  -->
   <!-- <app-ejemplo1></app-ejemplo1> -->
-   <app-distancia></app-distancia>
+   <!-- <app-distancia></app-distancia>-->
+    <app-zodiaco></app-zodiaco>
 </div>
